<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ThirdFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_logofinal_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sliderThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/SliderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>