<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singup.Register"
    android:background="@color/gray"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="17dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/textView_name"
        android:layout_width="175dp"
        android:layout_height="89dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:hint="@string/name"
        android:maxLength="15"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textView_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/textView_surname"
        android:layout_width="175dp"
        android:layout_height="89dp"
        android:layout_marginTop="88dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:hint="@string/surnae"
        android:maxLength="16"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/ET_Date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/fechaNacimiento"
        android:inputType="date"
        android:max="1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />


    <EditText
        android:id="@+id/editText_numer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:hint="@string/numer"
        android:inputType="number"
        android:maxLength="15"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_Date" />


    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:hint="Correo"
        android:maxLength="30"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_numer" />

</androidx.constraintlayout.widget.ConstraintLayout>